# NeuralModelsVST

./: README.md
Hybrid/: CMakeLists.txt  Hybrid.jucer
Hybrid/Builds/MacOSX/: Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Hybrid/Builds/MacOSX/Hybrid.xcodeproj/: project.pbxproj
Hybrid/Builds/MacOSX/Hybrid.xcodeproj/project.xcworkspace/xcuserdata/riccardosimionato.xcuserdatad/: UserInterfaceState.xcuserstate
Hybrid/Builds/MacOSX/Hybrid.xcodeproj/xcshareddata/xcschemes/: Hybrid - All.xcscheme  Hybrid - VST3.xcscheme
Hybrid/Builds/MacOSX/Hybrid.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Hybrid/Builds/MacOSX/Hybrid.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcschemes/: xcschememanagement.plist
Hybrid/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Hybrid/Models/: CL1BTapePreamp__lstm_8.onnx  EDCL1BTapePreamp.onnx
Hybrid/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
NeuralCL1B/: CL1B.jucer
NeuralCL1B/ExternalLibs/: add_onnxruntime_here
NeuralCL1B/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NeuralCL1B/Models/: CL1B_nof.onnx
NeuralCL1B/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
NeuralPiano/Builds/MacOSX/: Info-VST3.plist  Info-VST3_Manifest_Helper.plist
NeuralPiano/Builds/MacOSX/Muff.xcodeproj/: project.pbxproj
NeuralPiano/Builds/MacOSX/Muff.xcodeproj/project.xcworkspace/xcuserdata/riccardosimionato.xcuserdatad/: UserInterfaceState.xcuserstate
NeuralPiano/Builds/MacOSX/Muff.xcodeproj/xcshareddata/xcschemes/: Muff - All.xcscheme  Muff - VST3.xcscheme
NeuralPiano/Builds/MacOSX/Muff.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NeuralPiano/Builds/MacOSX/Muff.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcschemes/: xcschememanagement.plist
NeuralPiano/Builds/MacOSX/NeuralPiano.xcodeproj/: project.pbxproj
NeuralPiano/Builds/MacOSX/NeuralPiano.xcodeproj/project.xcworkspace/xcuserdata/riccardosimionato.xcuserdatad/: UserInterfaceState.xcuserstate
NeuralPiano/Builds/MacOSX/NeuralPiano.xcodeproj/xcshareddata/xcschemes/: NeuralPiano - VST3.xcscheme
NeuralPiano/Builds/MacOSX/NeuralPiano.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcschemes/: xcschememanagement.plist
NeuralPiano/Builds/MacOSX/Piano.xcodeproj/: project.pbxproj
NeuralPiano/Builds/MacOSX/Piano.xcodeproj/project.xcworkspace/xcuserdata/riccardosimionato.xcuserdatad/: UserInterfaceState.xcuserstate
NeuralPiano/Builds/MacOSX/Piano.xcodeproj/xcshareddata/xcschemes/: Piano - Shared Code.xcscheme  Piano - VST3.xcscheme
NeuralPiano/Builds/MacOSX/Piano.xcodeproj/xcuserdata/riccardosimionato.xcuserdatad/xcschemes/: xcschememanagement.plist
NeuralPiano/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NeuralPiano/Models/: NeuralPiano_grand.onnx  NeuralPiano_up.onnx  UprightPiano.onnx
NeuralPiano/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
